testdata/baselines/reference/submodule/conformance/recursiveTypeReferences2.errors.txt
bug39372.js(2,31): error TS8010: Type annotations can only be used in TypeScript files.
bug39372.js(24,12): error TS8010: Type annotations can only be used in TypeScript files.
bug39372.js(25,7): error TS2322: Type '{}' is not assignable to type 'XMLObject<{ foo: string; }>'.
  Type '{}' is missing the following properties from type '{ $A: { foo?: XMLObject<string>[]; }; $O: { foo?: { $$?: Record<string, string>; } & { $: string; }; }; $$?: Record<string, string>; }': $A, $O


==== bug39372.js (3 errors) ====
    /** @typedef {ReadonlyArray<Json>} JsonArray */
    /** @typedef {{ readonly [key: string]: Json }} JsonRecord */
                                  ~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    /** @typedef {boolean | number | string | null | JsonRecord | JsonArray | readonly []} Json */
    
    /**
     * @template T
     * @typedef {{
      $A: {
        [K in keyof T]?: XMLObject<T[K]>[]
      },
      $O: {
        [K in keyof T]?: {
          $$?: Record<string, string>
        } & (T[K] extends string ? {$:string} : XMLObject<T[K]>)
      },
      $$?: Record<string, string>,
      } & {
      [K in keyof T]?: (
        T[K] extends string ? string
          : XMLObject<T[K]>
      )
    }} XMLObject<T> */
    
    /** @type {XMLObject<{foo:string}>} */
               ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    const p = {};
          ~
!!! error TS2322: Type '{}' is not assignable to type 'XMLObject<{ foo: string; }>'.
!!! error TS2322:   Type '{}' is missing the following properties from type '{ $A: { foo?: XMLObject<string>[]; }; $O: { foo?: { $$?: Record<string, string>; } & { $: string; }; }; $$?: Record<string, string>; }': $A, $O
    